--- a/gb/25/12/1/n14646611.md
+++ b/gb/25/12/1/n14646611.md
@@ -12,12 +12,12 @@
 <p>提及未来，孟庭苇也承诺：“我仍会一直把音乐放在最重要的位置，继续创作、继续歌唱。愿用歌声记录世界，也愿用音符温暖人心。谢谢一路陪在我身边的朋友、伙伴、家人，也谢谢每一位在我的歌里找到安慰或力量的你。今晚的掌声与荣耀，我会永远记在心里。”</p>
 <p>责任编辑：苏漾</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/22/n10326635.md#1" target="_blank">杨宁：“四二五”政治构陷 江派黑手待拿下</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/17/n10916777.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（2）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/6/n11167928.md#1" target="_blank">林辉：寿则多辱 鲁迅之弟周作人凄惨中死去</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
